Changes for 1.0.0

 - [ZBX-1050] fixed possible windows agent crash while processing big eventlog records (Sasha)
 - [NTP-59] fixed wrong history links in latest data (Vedmak)
 - [NTP-56] fixed bug with refresh when 2+ log files added in monitoring->latest data (Vedmak)
 - [NTP-30] fixed processing of multi byte strings for item.lastvalue field (sasha)
 - [NTP-49] trigger functions str, regexp and iregexp now supports text items (Sasha)
 - [NTP-51] fixed deletion of httptests (Vedmak)
 - [NTP-47] added htmlentities check in monitoring triggers and events pages (Artem)
 - [NTP-48] fixed overview page item coloring with disabled triggers (Artem)
 - [NTP-44] fixed default graph item axis side on import (Artem)
 - [NTP-46] fixed rights in host-group (Artem)
 - [ZBX-689] allowed processing of non-agent based checks for unreachable hosts (Sasha)
 - [NTP-19] added inheritance of tempalte trigger status to all linked hosts (Artem)
 - [NTP-30] added support of UTF8 in email notifications (Sasha)
 - [NTP-29] fixed malfunction of the cpu data collector for Windows agents (Sasha)
 - [NTP-34] returned graph data pickup logic (Artem)
 - [NTP-32] fixed misspelled function inserted in trigger "logserverity" (Artem)
 - [ZBX-824] fixed net.tcp.service to work with host DNS name (Alexei)
 - [ZBX-737] the behaviour of the agent's key "vfs.fs.size" improved to be similar to the "df" command (Dmitry)
 - [NTP-21] size of files larger than 2GB is reported correctly (Dmitry)
 - [NTP-17] fixes in user permissions (Artem)
 - [NTD-91] fixed maintenance period selection by host-group or host (Artem)
 - [NTP-16] added to events page option hosts all from dropdown, when group is selected (Artem)
 - [NTP-14] removed time limit when "No False For B" is selected (Artem)
 - [NTP-13] fixed link in popup in overview page type data (Artem)
 - [NTP-12] fixed styles in menu for IE6 (Artem)
 - [NTP-11] added sorting by alias in users popup (Artem)
 - [NTD-84] added the enhanced trigger editing (Sasha)